单元测试问题

--- a/项目开发随笔.md
+++ b/项目开发随笔.md
@@ -12,3 +12,18 @@
     }
 ```
 
+## 2.单元测试报错问题
+
+如果出现这个错误
+
+```java
+Error creating bean with name 'serverEndpointExporter' defined in class path resource [org/jeecg/config/WebSocketConfig.class]:
+```
+
+需要该测试类上加入注解
+
+```java
+@RunWith(SpringRunner.class)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+```
+
